@@ -1,3 +1,8 @@
+
+Version Next
+
+    - Add default constructor to AbstractSimpleContainer and subclasses
+
 Version 1.0.571 Released November 27, 2012
 
     - Vaadin7: fix bug that broke VaadinApplication.get() when subclassed
